--- a/KKProgram Client/KKProgram Client.csproj
+++ b/KKProgram Client/KKProgram Client.csproj
@@ -58,8 +58,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="AddGroup.xaml.cs">
+      <DependentUpon>AddGroup.xaml</DependentUpon>
+    </Compile>
     <Compile Include="DataDevice.cs" />
     <Compile Include="IService1.cs" />
+    <Compile Include="ListGroup.xaml.cs">
+      <DependentUpon>ListGroup.xaml</DependentUpon>
+    </Compile>
     <Compile Include="listtariff.xaml.cs">
       <DependentUpon>listtariff.xaml</DependentUpon>
     </Compile>
@@ -76,6 +82,14 @@
     <Compile Include="tariff.xaml.cs">
       <DependentUpon>tariff.xaml</DependentUpon>
     </Compile>
+    <Page Include="AddGroup.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ListGroup.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="listtariff.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
